--- a/workflow-templates/docker-continuous-integration.yml
+++ b/workflow-templates/docker-continuous-integration.yml
@@ -12,9 +12,12 @@
 # ========================
 # 1. Copy this workflow template in ".github/workflows/" in your project
 # 2. Tailor it to your project
-#   1. The environment variables
-#   2. The job that tests the Docker image
-#   3. The location of the yamllint config file
+#     1. Give custom values to the environment variables
+#     2. Modify the job that tests the Docker image
+#     3. Set the location of the yamllint config file in the "lint-YAML"
+#     job or remove this job if it is not necessary
+#     4. Set up the [Codacy GitHub app](https://github.com/marketplace/codacy)
+#     if you want. You may remove the hadolint job if you set up Codacy.
 # 3. Commit and push to GitHub
 # 4. Watch live logs
 ---
